Add Lei Shi as an author

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,16 +1,16 @@
 default:                                                      # Fallback if nothing is specified
-  initial:      jdecent                                       # used for author lookup in posts and for first two characters in the about page back button
-  name:         "Jekyll Decent"                               # used to display author name
+  initial:      lei                                           # used for author lookup in posts and for first two characters in the about page back button
+  name:         "Lei Shi"                                     # used to display author name
   cover:        /assets/mountain-alternative-cover.jpg        # OPTIONAL: defines location of cover image in about page
-  picture:      /assets/johndoe.jpg                           # OPTIONAL: author picture
-  bio:          This is my bio!                               # OPTIONAL: text below author name in posts
-  location:     Germany                                       # OPTIONAL: used to display location of the author
-  website:                          						  # OPTIONAL: link to the author of a post
-  email:                                                      # OPTIONAL: used in the about page
+  picture:      /assets/lei-shi-with-camel.jpg                # OPTIONAL: author picture
+  bio:          Yet another software engineer                 # OPTIONAL: text below author name in posts
+  location:     China                                         # OPTIONAL: used to display location of the author
+  website:      https://leishi.io                						  # OPTIONAL: link to the author of a post
+  email:        me@leishi.io                                  # OPTIONAL: used in the about page
   twitter:                                                    # OPTIONAL: used in the about page
   linkedin:                                                   # OPTIONAL: used in the about page
   xing:                                                       # OPTIONAL: used in the about page
-  github:                                                     # OPTIONAL: used in the about page
+  github:       leishi1313                                    # OPTIONAL: used in the about page
   stackoverflow:                                              # OPTIONAL: used in the about page
   facebook:                                                   # OPTIONAL: used in the about page
   gplus:                                                      # OPTIONAL: used in the about page
@@ -42,3 +42,12 @@ jwillmer:
   website:      "http://jwillmer.de/cv" 
   twitter:      jenswillmer
   github:       jwillmer
+leishi:
+  initial:      lei
+  name:         "Lei Shi"
+  picture:      /assets/lei-shi-with-camel.jpg
+  bio:          Yet another software engineer
+  location:     China
+  email:        me@leishi.io
+  github:       leishi1313
+
