--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,9 @@ workflows:
   build-deploy:
     jobs:
       - build
+          filters:
+            tags:
+              only: /^v.*/
       - deploy:
           requires:
             - build
