--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,8 +74,12 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      - build:
+      - build
       - deploy:
           requires:
             - build
+          filters:
+            branches:
+              only:
+                - master
 
