Change author key

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -42,7 +42,7 @@ jwillmer:
   website:      "http://jwillmer.de/cv" 
   twitter:      jenswillmer
   github:       jwillmer
-leishi:
+lei:
   initial:      lei
   name:         "Lei Shi"
   picture:      /assets/lei-shi-with-camel.jpg
