--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,3 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 title:            Lei Shi's Blog
 subtitle:         Example Blog
@@ -20,6 +13,16 @@ disqus_shortname: "blog"
 
 # Google Analytics 
 google-analytics: 'UA-119177383-3'
+
+author:
+  initial:      lei
+  name:         "Lei Shi"
+  picture:      /assets/lei-shi-with-camel.jpg
+  bio:          Yet another software engineer
+  location:     China
+  email:        me@leishi.io
+  github:       leishi1313
+
 
 # Build settings
 sass:
