--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,9 @@ jobs:
             echo "===================================================================================="
             ./md-proofer lint ./_posts/
       - run:
+          name: "Update gem"
+          command: sudo gemupdate --system
+      - run:
           name: "Install bundle"
           command: gem install bundler
       - restore_cache:
