Modify about page.

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ google-analytics: 'UA-119177383-3'
 author:
   initial:      lei
   name:         "Lei Shi"
-  picture:      /assets/lei-shi-with-camel.jpg
+  picture:      /assets/profile.jpg
   bio:          Yet another software engineer
   location:     China
   email:        me@leishi.io
